--- a/ProjektAdamczykPUM/ProjektAdamczykPUM/Views/LPValuePage.xaml
+++ b/ProjektAdamczykPUM/ProjektAdamczykPUM/Views/LPValuePage.xaml
@@ -3,7 +3,9 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="ProjektAdamczykPUM.Views.LPValuePage">
     <StackLayout>
-        <Entry Keyboard="Numeric" Text="{Binding Amount, Mode=OneWayToSource}" FontSize="Medium" VerticalOptions="StartAndExpand" MaxLength="6" />
+        <Entry Keyboard="Numeric" HorizontalTextAlignment="Center" Text="{Binding Amount, Mode=OneWayToSource}" FontSize="Medium" VerticalOptions="Start" MaxLength="6" />
+        <Label Text="{Binding Sign}" FontSize="Large"
+               VerticalOptions="StartAndExpand" HorizontalOptions="CenterAndExpand" />
         <Button Text="Confirm"
                 Command="{Binding LpChange}"
             VerticalOptions="FillAndExpand"
